[project]
name = "data-sourcing"
version = "0.1.0"
description = ""
authors = [
    {name = "Arowosegbe Victor",email = "iyanuvicky@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=3.0.2,<4.0.0)",
    "polars (>=1.40.0,<2.0.0)",
    "boto3 (>=1.42.91,<2.0.0)",
    "pyarrow (>=23.0.1,<24.0.0)",
    "fastapi (>=0.136.0,<0.137.0)",
    "requests (>=2.33.1,<3.0.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "xlsxwriter (>=3.2.9,<4.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "duckdb (>=1.5.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.support.dependencies]
pydantic = "^2.13.2"
python-dotenv = "^1.2.2"
black = "^26.3.1"

